third_party/move/move-compiler-v2/tests/bytecode-generator/wildcard6.move
module 0xc0ffee::m {
    public fun test2(): u64 {
        let x = 40;
        let (y, _) = (move x, x);
        y
    }
}
